# config/packages/nelmio_api_doc.yaml
@@ -6,7 +6,7 @@ nelmio_api_doc:
       version: 1.0.0
     paths:
       # Brand routes
-      /insertbrand:
+      /insertMarque:
         post:
           tags:
             - Brand
@@ -30,7 +30,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /deletebrand/{id}:
+      /deleteMarque/{id}:
         delete:
           tags:
             - Brand
@@ -50,7 +50,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /listallbrands:
+      /listeMarque:
         get:
           tags:
             - Brand
@@ -65,7 +65,7 @@ nelmio_api_doc:
                 type: string
                 format: password
       # Car routes
-      /insertcar:
+      /insertVoiture:
         post:
           tags:
             - Car
@@ -95,7 +95,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /deletecar/{id}:
+      /deleteVoiture/{id}:
         delete:
           tags:
             - Car
@@ -115,7 +115,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /listallcars:
+      /listeVoiture:
         get:
           tags:
             - Car
@@ -130,7 +130,7 @@ nelmio_api_doc:
                 type: string
                 format: password
       # City routes
-      /insertcity:
+      /insertVille:
         post:
           tags:
             - City
@@ -156,7 +156,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /deletecity/{id}:
+      /deleteVille/{id}:
         delete:
           tags:
             - City
@@ -176,7 +176,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /listallcities:
+      /listeVille:
         get:
           tags:
             - City
@@ -190,7 +190,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /listallzipcodes:
+      /listeCodePostal:
         get:
           tags:
             - City
@@ -205,7 +205,7 @@ nelmio_api_doc:
                 type: string
                 format: password
       # Student routes
-      /insertstudent:
+      /insertPersonne:
         post:
           tags:
             - Student
@@ -239,7 +239,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /deletestudent/{id}:
+      /deletePersonne/{id}:
         delete:
           tags:
             - Student
@@ -259,7 +259,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /updatestudent:
+      /updatePersonne:
         put:
           tags:
             - Student
@@ -297,7 +297,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /selectstudent/{id}:
+      /selectPersonne/{id}:
         get:
           tags:
             - Student
@@ -317,7 +317,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /listallstudents:
+      /listPersonne:
         get:
           tags:
             - Student
@@ -332,7 +332,7 @@ nelmio_api_doc:
                 type: string
                 format: password
       # Trip routes
-      /inserttrip:
+      /insertTrajet:
         post:
           tags:
             - Trip
@@ -367,7 +367,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /insertparticipation:
+      /insertInscription:
         post:
           tags:
             - Trip
@@ -393,7 +393,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /deletetrip/{id}:
+      /deleteTrajet/{id}:
         delete:
           tags:
             - Trip
@@ -413,7 +413,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /deleteparticipation/{id}:
+      /deleteInscription/{id}:
         delete:
           tags:
             - Trip
@@ -433,7 +433,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /searchtrip/{idCityStart}/{idCityArrival}/{dateTravel}:
+      /rechercheTrajet/{idCityStart}/{idCityArrival}/{dateTravel}:
         get:
           tags:
             - Trip
@@ -466,7 +466,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /listalltrips:
+      /listeTrajet:
         get:
           tags:
             - Trip
@@ -480,7 +480,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /listallparticipations:
+      /listeInscription:
         get:
           tags:
             - Trip
@@ -494,7 +494,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /getstudentontrips/{id}:
+      /listeInscriptionUser/{id}:
         get:
           tags:
             - Trip
@@ -514,7 +514,7 @@ nelmio_api_doc:
               schema:
                 type: string
                 format: password
-      /getdriverontrip/{id}:
+      /listeInscriptionConducteur/{id}:
         get:
           tags:
             - Trip
